minikube/minio/01-storageclass.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: minio-tenant
