minikube/minio/minio-storage.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: minio
